--- a/metadata.yaml
+++ b/metadata.yaml
@@ -45,6 +45,7 @@ subjects:
 - !lcsh 'Zoological specimens -- Collection and preservation'
 - !lcc 'QL'
 - !lcsh 'Taxidermy'
+- GITenberg
 title: "Taxidermy and Zoological Collecting\r\nA Complete Handbook for the Amateur\
   \ Taxidermist, Collector, Osteologist, Museum-Builder, Sportsman, and Traveller"
 url: http://www.gutenberg.org/ebooks/40109
